fix align error: social icon

--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -45,14 +45,14 @@
     margin: 64px 0 16px 0;
 }
 
-.main-sentence-2 {
-    font-family: 'Delight Coffee', sans-serif;
-    font-size: 36px;
-    font-weight: bold;
-    letter-spacing: 5px;
-    color: #F9C10B;
-    margin: 0 0 16px 0;
-}
+/*.main-sentence-2 {*/
+/*    font-family: 'Delight Coffee', sans-serif;*/
+/*    font-size: 36px;*/
+/*    font-weight: bold;*/
+/*    letter-spacing: 5px;*/
+/*    color: #F9C10B;*/
+/*    margin: 0 0 16px 0;*/
+/*}*/
 
 .main-sentence-underlined {
     font-family: 'Delight Coffee', sans-serif;
